--- a/stylesheet.css
+++ b/stylesheet.css
@@ -250,7 +250,35 @@ footer {
 
 
 
+.block {
 
+  display: block;
+
+  width: 100%;
+
+  border: none;
+
+  background-color: #4CAF50;
+
+  color: white;
+
+  padding: 14px 28px;
+
+  font-size: 16px;
+
+  cursor: pointer;
+
+  text-align: center;
+
+}
+
+.block:hover {
+
+  background-color: #ddd;
+
+  color: black;
+
+}
 
 
 
