--- a/styling.css
+++ b/styling.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background-image: url(expo.jpg);
-	height: 100hv;
+	height: 100%;
 	background-size: cover;
 	background-position: center;
 	font-family: sans-serif;
