--- a/stylesheet.css
+++ b/stylesheet.css
@@ -284,6 +284,16 @@ footer {
 }
 .form-gap {
     padding-top: 70px;
+	width: 320px;
+	height: 420px;
+	background: #000;
+	color: #fff;
+	top: 50%;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%,-50%);
+	box-sizing: border-box;
+	padding: 70px 30px;
 }
 
 
