--- a/stylesheet.css
+++ b/stylesheet.css
@@ -283,16 +283,17 @@ footer {
 
 }
 .form-gap {
-    padding: 70px 30px;
-	width: 320px;
-	height: 420px;
-	background: #000;
-	color: #fff;
-	top: 50%;
-	left: 50%;
-	position: absolute;
-	transform: translate(-50%,-50%);
-	box-sizing: border-box;
+    padding-top: 100px ;
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	padding-bottom: 100px ;
 	
 }
 
