--- a/styling.css
+++ b/styling.css
@@ -6,6 +6,7 @@ body {
 	background-size: cover;
 	background-position: center;
 	font-family: sans-serif;
+        background-repeat: no-repeat;
 }
 
 .loginbox{
