--- a/styling.css
+++ b/styling.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url(expo.jpg);
+	background-image: url(expo.webp);
 	height: 100%;
 	background-size: cover;
 	background-position: center;
