--- a/styling.css
+++ b/styling.css
@@ -2,11 +2,11 @@ body {
 	margin: 0;
 	padding: 0;
 	background-image: url(expo.webp);
-	height: 100%;
+	height: 100hv;
 	background-size: cover;
 	background-position: center;
 	font-family: sans-serif;
-        background-repeat: no-repeat;
+       
 }
 
 .loginbox{
