--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,7 +57,7 @@ a {
 
   height: 100vh;
 
-  background-image: url(humau.webp);
+  background-image: url(humau.jpg);
 
   background-size: cover;
 
