--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,6 +70,22 @@ a {
 }
 
 
+.top-wrapper {
+
+position: absolute;
+
+top: 20%;
+
+bottom: 50%;
+
+left: 5%;
+
+right: 5%;
+
+text-align:center;
+
+}
+
 .top-wrapper h1 {
   
   opacity: 1;
