--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,8 @@ a {
 
   background-image: url(humau.jpg);
  background-repeat:no-repeat;
-background-size:cover;
+
+	background-size: 100% 100%;
    
 
   color: white;
